# strata

./: .gitignore  AGENTS.md  Makefile  README.md  buildspec.yml  handoff.md  onboarding_cfn.yaml  strata-dev-kind.yaml
.github/workflows/: backend.yml  go-services.yml  node-service.yml  tui.yml  web.yml
accio/: AGENTS.md  K8S_SETUP.md  Tiltfile  accio-kind.yaml  docker-compose.yml  envoytest.yaml  github_actions_setup.md  go.work
accio/authelia/: configuration.yml  db.sqlite3  users.yml
accio/blueprints/: portal.yaml
accio/envoy/: envoy.yaml
backend/: README.md
cli/: .env.example  agent.py  main.py  requirements.txt  stats.py
docs/: README.md  cnpg.md  envoy-gateway.md  external-secrets.md  keycloak.md  kubernetes.md  langchain.md  langgraph.md  mcp.md  nextjs.md  rag.md  textual.md
flutter_app/: pubspec.yaml
infra/: README.md  api_gateway.tf  codebuild.tf  cognito.tf  dynamodb.tf  iam.tf  kms.tf  lambdas.tf  main.tf  output.tf  s3.tf  secrets_manager.tf  step_functions.tf  variables.tf
notes/: bedrock.md  langchain.md  langgraph.md  litellm.md  nextjs.md
onboarding/: README.md  strata-platform-role.yaml
sample-app/: AGENTS.md  K8S_SETUP.md  Tiltfile  accio-kind.yaml  add_go_tests.sh  docker-compose.yml  github_actions_setup.md  go.work
sampleclientapp/: docker-compose.yml
sandbox/linux-tui/: .gitignore  README.md  pyproject.toml
sandbox/linux-tui/linux_tui/: __init__.py  __main__.py  app.py
sandbox/linux-tui/linux_tui/agent/: __init__.py  chain.py  loop.py  model.py  parser.py  prompts.py
sandbox/linux-tui/linux_tui/screens/: __init__.py  confirm.py
sandbox/linux-tui/linux_tui/tools/: __init__.py  disk_usage.py  grep.py  list_dir.py  read_file.py  run_command.py  system_info.py
sandbox/linux-tui/linux_tui/widgets/: __init__.py  history.py  input_box.py  status_bar.py
sandbox/linux-tui/tests/: __init__.py  test_loop.py  test_prompts.py  test_tools.py
services/agent-service/: Dockerfile  README.md  pyproject.toml
services/agent-service/app/: graph.py  main.py  state.py
services/agent-service/app/providers/: litellm_provider.py
services/agent-service/app/tools/: __init__.py  delete_cluster.py  get_cluster_logs.py  get_cluster_status.py  list_clusters.py  provision_cluster.py
services/agent-service/tests/: test_graph.py  test_tools.py
specs/: accio_master_doc.md  sample_app_architecture.md  strata_master_doc.md
tui/: .env.example  README.md  pyproject.toml
tui/strata_tui/: __init__.py  __main__.py  app.py  config.py
tui/strata_tui/tools/: __init__.py
tui/strata_tui/widgets/: __init__.py  history.py  input_box.py  status_bar.py
tui/tests/: __init__.py  test_app.py  test_tools.py
web/: README.md
(+270 files in other folders)
