[project]
name = "strata-tui"
version = "0.1.0"
description = "Strata Textual TUI. Python + LangChain + LangGraph + MiniMax M3 (BYOK)."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "langchain>=1.0",
    "langchain-core>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strata_tui"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]